# Pilcrow

./: LICENSE.md  README.md
Docs/: RESTAPISpec.md
Resources/Shaders/: Model.sprog  ModelFrag.cso  ModelVert.cso
Tools/ReflectionExporter/: ReflectionExporter.deps.json
build_scripts/windows/: buildVS2019.bat
cmake/: pilcrow_source_group.cmake
pilcrow/dependencies/: CMakeLists.txt
pilcrow/engine/core/: CMakeLists.txt  Camera.hpp  ReflectedGlm.cpp  ReflectedGlm.hpp  RenderComponents.h  RenderSystem.cpp  RenderSystem.h  SettingsFileReader.hpp  Simulation.cpp  Simulation.hpp  World.cpp  World.hpp
pilcrow/engine/core/components/: Transform.h  WeaponComponents.h
pilcrow/engine/core/entity/: ConstrainedEntityRef.hpp  Entity.cpp  Entity.hpp  Entity.inl  EntityRef.hpp
pilcrow/engine/core/serialization/: CMakeLists.txt  Serialize.cpp  Serialize.hpp
pilcrow/engine/core/settings/: WindowSettings.h
pilcrow/engine/core/system/: System.hpp  System.inl
pilcrow/engine/rest_api/: RESTAPI.cpp  RESTAPI.h
pilcrow/modules/: CMakeLists.txt
pilcrow/modules/jellyfish_renderer/: AssimpLoaders.hpp  Model.cpp  Model.h  RenderMain.cpp  Vertex.h  iMesh.h  iShader.h  iTexture.h  iWindow.h
pilcrow/modules/physics/: CMakeLists.txt  Mathematics.cpp  Mathematics.h
pilcrow/modules/physics/components/: Body.h  CMakeLists.txt  CircleCollider.cpp  CircleCollider.h
pilcrow/modules/physics/systems/: CollisionDetection.cpp  CollisionDetection.h
pilcrow/modules/shmup/: CMakeLists.txt  Source.cpp  Source.hpp
pilcrow/runtimes/restful_runtime/: CMakeLists.txt  main.cpp
(+24 files in other folders)
